--- a/styles/common/_variable.scss
+++ b/styles/common/_variable.scss
@@ -4,8 +4,8 @@ $transparent: transparent;
 $base: #444444;
 
 $primary: #ff7f42;
-
 $primary-2: #e89800;
+$primary-3: #ffdfd0;
 
 $primary-light: #dee8f6;
 
