--- a/styles/components/select.scss
+++ b/styles/components/select.scss
@@ -1,15 +1,3 @@
-.select{
-  &__control{
-    @extend .rounded-8px;
-    @extend .minh-33px;
-  }
-  &__indicator-separator{
-    @extend .d-none;
-  }
-  &-disable-icon .select__indicator{
-    @extend .d-none;
-  }
-  &-sm .select__control{
-    min-height: inherit!important;
-  }
+.select-default__indicator-separator{
+  @extend .d-none;
 }
